Creating the recipe for scrambled egg

--- a/Scrambled eggs.html
+++ b/Scrambled eggs.html
@@ -2,9 +2,19 @@
 <html>
     <head>Scrambled eggs</head>
     <body>
-        <h1>Lesson 1 Scrambled Eggs</h1>
-        <p>Description: One of the easiest dish you could ever made, Difficulty: 0/5</p>
-        <h2>Lesson 2 Frying Lectuce</h2>
-        <p>Description: Pretty much as easy as scrambled eggs, Difficulty: 0/5</p>
+        <h1>Scrambled Eggs</h1>
+        <h2>Ingredients: </h2>
+        <p>Egg(s) x 2</p>
+        <p>Salt 1 tea spoon (Optional)</p>
+        <p>Milk 30 mL (Optional)</p>
+        <h2>Steps: </h2>
+        <p>1. Wash and crack the 2 eggs into a bowl (Tip 1)</p>
+        <p>2. Add the salt and milk, salt can help with the flavour</p>
+        <p>3. Beat the eggs throughly</p>
+        <p>4. Add oil to a pan, after that turn on the stove</p>
+        <p>5. When the oil is hot enough (usually wait 10 seconds) then pour the eggs into the pan</p>
+        <p>6. Push the eggs from the bottom, those has been cooked and should be solid</p>
+        <p>7. Turn off the heat when the egg is at 70%-80% solid</p>
+        <p>8. When the egg is fully in solid form, you can put it in a plate and enjoy :)</p>
     </body>
 </html>
