Adding CSS to recipe webpages

--- a/Scrambled eggs.html
+++ b/Scrambled eggs.html
@@ -2,6 +2,7 @@
 <html>
     <head>Scrambled eggs</head>
     <body>
+        <link rel="stylesheet" href="Recipe_style.css">
         <h1>Scrambled Eggs</h1>
         <h2>Ingredients: </h2>
         <p>Egg(s) x 2</p>
