Adding the recipe for frying lectuce, adding css to the index page and changing a bit of colour of recipe pages

--- a/Frying lectuce.html
+++ b/Frying lectuce.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
 <html>
-    <head>Intermediate recipes</head>
     <body>
-        <h1>Lesson 1 </h1>
+        <link rel="stylesheet" href="Recipe_style.css">
+        <h1>Frying Vegies</h1>
+        <h2>Ingredients:</h2>
+        <p>Any types of vegetables you like</p>
+        <p>A bit of salt</p>
+        <p>Garlic (option)</p>
+        <h2>Steps:</h2>
+        <p>1. If your choice of vegetables requires cutting, rinse it then cut it</p>
+        <p>2. Wash the vegetables and place it in a colander and dry it</p>
+        <p>3. While you're waiting, cut the garlic into small pieces</p>
+        <p>4. After that, add oil to your frying pan and turn the heat on</p>
+        <p>5. Add the garlic into the pan when the oil has been heated, this can bring out the smell of the garlic</p>
+        <p>*Reminder: Remember to keep on stirring to avoid them being burnt</p>
+        <p>6. After the garlic has a slight change of colour, started to add the vegetables and stir</p>
+        <p>7. Add a bit of salt at last for a bit of flavour</p>
+        <p>8. After the vege are soft enough you can put it onto your plate</p>
     </body>
 </html>
