--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
 
     <!--Expanding for a menu for Beginner recipes-->
     <div id="menu-toggle">Beginner Recipes</div>
+    <style>
+        div{
+            color: #34f434
+        }
 
+        p {
+            color: #500050
+        }
+    </style>
     <!--List of beginner recipes-->
     <div id="menu-links">
         <a href="Scrambled eggs.html">Lesson 1 Scrambled Eggs</a>
